--- a/style.css
+++ b/style.css
@@ -12,15 +12,21 @@ body {
 }
 
 h1 {
+  font-size: 2.2em;
+  background: linear-gradient(135deg, #7d077d, #ff69b4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
   color: white;
 }
+
 
 #album-container {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   max-width: 100%;
 }
 
