--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   font-family: Arial, sans-serif;
   background-color: #060606;
   margin: 0;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,15 +10,40 @@ body {
   box-sizing: border-box;
 }
 
+.header {
+  background-image: url('./album-images/header-image.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 20vh;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 h1 {
-  font-size: 2.2em;
-  background: linear-gradient(135deg, #7d077d, #ff69b4);
+  position: relative;
+  font-size: clamp(1.5rem, 6vw, 4rem);
+  font-weight: bolder;
+  padding-left: 20px;
+  background: linear-gradient(135deg, #975adc, #ff1493, #f48acf, #ff69b4);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   color: white;
+  z-index: 2;
+  display: inline-block;
 }
 
+h1::before {
+  content: "";
+  position: absolute;
+  top: -0.2em;
+  left: 0;
+  right: -1em;
+  bottom: -0.2em;
+  z-index: 1;
+  padding: 0.2em 0 0.5em;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 
 #album-container {
   display: flex;
@@ -28,6 +52,7 @@ h1 {
   justify-content: center;
   align-items: stretch;
   max-width: 100%;
+  padding: 20px;
 }
 
 .album-card {
