--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
   background-color: #060606;
   margin: 0;
   display: flex;
@@ -17,32 +19,46 @@ body {
   height: 20vh;
   width: 100%;
   margin-bottom: 20px;
+  position: relative;
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+
+  background-color: rgba(0, 0, 0, 0.55);
+  height: 20vh;
+  overflow: hidden;
 }
 
 h1 {
-  position: relative;
-  font-size: clamp(1.5rem, 6vw, 4rem);
+  font-size: clamp(1.5rem, 5vh, 4rem);
   font-weight: bolder;
-  padding-left: 20px;
-  background: linear-gradient(135deg, #975adc, #ff1493, #f48acf, #ff69b4);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  font-family: 'Montserrat';
+
+
   color: white;
-  z-index: 2;
+  background: linear-gradient(90deg, #fff 30%, #ff1493 50%, #fff 70%, #fff 100%);
+  /* background: linear-gradient(135deg, #975adc, #ff1493, #f48acf, #ff69b4); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  background-size: 200% auto;
   display: inline-block;
+  animation: shimmer 3s linear forwards;
 }
 
-h1::before {
-  content: "";
-  position: absolute;
-  top: -0.2em;
-  left: 0;
-  right: -1em;
-  bottom: -0.2em;
-  z-index: 1;
-  padding: 0.2em 0 0.5em;
-  background-color: rgba(0, 0, 0, 0.2);
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+
+  100% {
+    background-position: -100% 0;
+  }
 }
 
 #album-container {
