--- a/style.css
+++ b/style.css
@@ -28,20 +28,19 @@ body {
   align-items: center;
   margin: 0;
   padding: 0;
-
   background-color: rgba(0, 0, 0, 0.55);
   height: 20vh;
   overflow: hidden;
 }
 
 h1 {
-  font-size: clamp(1.5rem, 5vh, 4rem);
+  font-size: 10vw;
   font-weight: bolder;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
 
 
   color: white;
-  background: linear-gradient(90deg, #fff 30%, #ff1493 50%, #fff 70%, #fff 100%);
+  background: linear-gradient(90deg, #fff 30%, #ff1493 50%, #fff 70%, #eeefbe 100%);
   /* background: linear-gradient(135deg, #975adc, #ff1493, #f48acf, #ff69b4); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -133,5 +132,11 @@ h1 {
 .album-card p {
   margin: 5px 0;
   color: #f1f3f3;
-  /* color: #7d8396; */
+}
+
+
+@media (min-width: 900px) {
+  h1 {
+    font-size: 7vw;
+  }
 }
