--- a/style.css
+++ b/style.css
@@ -107,6 +107,20 @@ h1 {
   background-color: grey;
 }
 
+#randomButton {
+  padding: 10px 20px;
+  margin-top: 10px;
+  background-color: rgb(95, 3, 95);
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+#randomButton:hover {
+  background-color: grey;
+}
+
 #album-container {
   display: flex;
   flex-wrap: wrap;
