--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1 {
   position: absolute;
   top: 50px;
   left: 20px;
-  width: 300px;
+  max-width: 70vw;
   background-color: whitesmoke;
   border: 1px solid #ccc;
   padding: 20px;
