--- a/style.css
+++ b/style.css
@@ -66,23 +66,28 @@ h1 {
 .button-container {
   display: flex;
   justify-content: center;
-  gap: 2px;
+  position: relative;
+  display: inline-block;
+  gap: 5%;
 }
 
 .panel {
   display: none;
   position: absolute;
-  top: 50px;
-  left: 20px;
+  top: 100%;
+  left: 0;
   max-width: 70vw;
-  background-color: whitesmoke;
-  border: 1px solid #ccc;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  border: 2px solid #1b2028;
   padding: 20px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 
 #filterButton {
   padding: 10px 20px;
+  text-align: center;
   background-color: purple;
   color: white;
   border: none;
@@ -92,6 +97,10 @@ h1 {
 
 #filterButton:hover {
   background-color: grey;
+}
+
+#filterButton.active {
+  background-color: rgb(53, 11, 53);
 }
 
 #sortButton {
@@ -107,6 +116,10 @@ h1 {
   background-color: grey;
 }
 
+#sortButton.active {
+  background-color: rgb(53, 11, 53);
+}
+
 #randomButton {
   padding: 10px 20px;
   margin-top: 10px;
@@ -118,7 +131,8 @@ h1 {
 }
 
 #randomButton:hover {
-  background-color: grey;
+  background-color: #734a58;
+
 }
 
 #album-container {
