--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1 {
   display: flex;
   justify-content: center;
   position: relative;
-  gap: 10%;
+  gap: 10px;
 }
 
 .panel {
@@ -80,15 +80,19 @@ h1 {
   /* Adjust height to fit below the header */
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
-  transition: right 0.6s ease;
+  transition: right 0.9s ease;
   z-index: 1000;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 15px;
+  gap: 20px;
   padding: 20px;
   box-sizing: border-box;
+}
+
+label {
+  font-weight: bold;
 }
 
 select {
@@ -98,14 +102,9 @@ select {
   padding: 10px;
   border-radius: 4px;
   width: 100%;
+  margin-bottom: 20px;
   font-size: 16px;
   appearance: none;
-  /* Remove default styling */
-  -webkit-appearance: none;
-  /* Remove default styling in Safari */
-  -moz-appearance: none;
-  /* Remove default styling in Firefox */
-
 }
 
 /* Style the dropdown arrow */
@@ -119,7 +118,7 @@ select::after {
   color: #fff;
 }
 
-#applyFilters {
+.apply {
   padding: 10px 20px;
   margin-top: 20px;
   background-color: #000;
@@ -129,6 +128,11 @@ select::after {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s, color 0.3s, transform 0.2s;
+}
+
+.apply:active {
+  transform: scale(0.95);
+  background-color: #555;
 }
 
 .panel.show {
@@ -155,61 +159,48 @@ select::after {
   color: #ff69b4;
 }
 
-#filterButton {
+.button {
   padding: 10px 20px;
   text-align: center;
-  background-color: purple;
+  background-color: rgb(143, 5, 92);
   color: white;
   border: none;
   cursor: pointer;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
   border-radius: 4px;
 }
 
-#filterButton:hover {
+.button:hover {
   background-color: grey;
 }
 
-#filterButton.active {
-  background-color: rgb(53, 11, 53);
+.button.active {
+  background-color: rgb(63, 6, 63);
 }
 
-#sortButton {
-  padding: 10px 20px;
-  background-color: purple;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-#sortButton:hover {
-  background-color: grey;
-}
-
-#sortButton.active {
-  background-color: rgb(53, 11, 53);
-}
-
-#randomButton {
+.random-button {
   padding: 10px 20px;
   margin-top: 10px;
-  background-color: #80408c;
+  background-color: #4f045d;
   color: white;
   border: none;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
   cursor: pointer;
   border-radius: 4px;
 }
 
-#randomButton:hover {
+.random-button:hover {
   background-color: #734a58;
 }
 
-#randomButton.clicked {
+.random-button.clicked {
   background-color: #80408c;
   border: 2px solid purple;
 }
 
-#album-container {
+.album-container {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -286,6 +277,14 @@ select::after {
 @media (max-width: 768px) {
   .panel {
     width: 100%;
+  }
+
+  .button {
+    font-size: 14px;
+  }
+
+  .random-button {
+    font-size: 14px;
   }
 }
 
