--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
   width: 500px;
   height: calc(100% - 20vh);
   /* Adjust height to fit below the header */
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.88);
   color: white;
   transition: right 0.9s ease;
   z-index: 1000;
@@ -143,7 +143,7 @@ select::after {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 20px;
+  font-size: 30px;
   transition: transform 0.2s, color 0.2s;
   padding: 5px;
   border-radius: 50%;
@@ -162,12 +162,13 @@ select::after {
 .button {
   padding: 10px 20px;
   text-align: center;
-  background-color: rgb(143, 5, 92);
+  background-color: rgb(18, 2, 12);
   color: white;
   border: none;
   cursor: pointer;
   font-size: 18px;
   font-family: 'Montserrat', sans-serif;
+  border: 1px solid pink;
   border-radius: 4px;
 }
 
@@ -182,9 +183,10 @@ select::after {
 .random-button {
   padding: 10px 20px;
   margin-top: 10px;
-  background-color: #4f045d;
+  /* background-color: #4f045d; */
+  background-color: rgb(18, 2, 12);
+  border: 2px solid purple;
   color: white;
-  border: none;
   font-size: 18px;
   font-family: 'Montserrat', sans-serif;
   cursor: pointer;
