--- a/style.css
+++ b/style.css
@@ -280,6 +280,36 @@ select:focus {
   color: #f1f3f3;
 }
 
+footer {
+  border-top: 4px dotted white;
+  margin-top: 4%;
+  color: white;
+  padding-top: 2%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer h4 {
+  font-size: 1rem;
+  margin: 5px 0;
+}
+
+footer i {
+  margin-right: 8px;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+footer a:hover {
+  color: purple;
+}
+
 @media (max-width: 768px) {
   .panel {
     width: 100%;
