--- a/style.css
+++ b/style.css
@@ -290,10 +290,16 @@ footer {
   flex-direction: column;
   align-items: center;
 }
-
+footer .personal-info-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  width: 100%;
+}
 footer h4 {
   font-size: 1rem;
   margin: 5px 0;
+  text-align: center;     
 }
 
 footer i {
