--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
   font-family: 'Arial', sans-serif;
@@ -26,6 +26,7 @@ body {
   width: 100%;
   margin-bottom: 20px;
   position: relative;
+  box-sizing: border-box;
 }
 
 .overlay {
@@ -43,8 +44,6 @@ h1 {
   font-size: 10vw;
   font-weight: bolder;
   font-family: 'Montserrat', sans-serif;
-
-
   color: white;
   background: linear-gradient(90deg,
       #fff 30%,
@@ -99,6 +98,7 @@ h1 {
 
 label {
   font-weight: bold;
+  padding-top: 15px;
 }
 
 select {
@@ -108,7 +108,7 @@ select {
   padding: 10px;
   border-radius: 4px;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 16px;
   outline: none;
   appearance: none;
@@ -193,7 +193,6 @@ select:focus {
 .random-button {
   padding: 10px 20px;
   margin-top: 10px;
-  /* background-color: #4f045d; */
   background-color: rgb(18, 2, 12);
   border: 2px solid purple;
   color: white;
@@ -218,11 +217,28 @@ select:focus {
   gap: 20px;
   justify-content: center;
   align-items: stretch;
-  max-width: 100%;
+  width: 100%;
   padding: 20px;
+  overflow-x: hidden;
 }
 
-.album-card {
+.fullscreen-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+}
+
+.fullscreen-overlay.active {
+  display: block;
+}
+
+.album-card,
+.random-card {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -241,49 +257,56 @@ select:focus {
       rgba(115, 74, 88, 0.1) 15%,
       #1b2028 20%,
       #1b2028 100%);
+
+  &:after {
+    content: "";
+    display: block;
+    top: -3px;
+    left: -3px;
+    bottom: -3px;
+    right: -3px;
+    z-index: -1;
+    position: absolute;
+    border-radius: 16px;
+    background-image: linear-gradient(135deg,
+        #752e7c,
+        #734a58 20%,
+        #1b2028 30%,
+        #2c333e 100%);
+  }
 }
 
-.album-card:after {
-  content: "";
-  display: block;
-  top: -3px;
-  left: -3px;
-  bottom: -3px;
-  right: -3px;
-  z-index: -1;
-  position: absolute;
-  border-radius: 16px;
-  background-image: linear-gradient(135deg,
-      #752e7c,
-      #734a58 20%,
-      #1b2028 30%,
-      #2c333e 100%);
-}
-
-.album-art {
+.album-art,
+.random-art {
   border-radius: 5%;
   overflow: hidden;
   width: 175px;
   height: 175px;
   position: relative;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+  }
 }
 
-.album-art img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-}
-
-.album-card h2 {
+.album-card h2,
+.random-card h2 {
   margin: 10px 0;
   font-size: 1.5em;
 }
 
-.album-card p {
+.album-card p,
+.random-card p {
   margin: 5px 0;
   color: #f1f3f3;
+}
+
+.close-btn {
+  display: none;
 }
 
 footer {
@@ -352,23 +375,94 @@ footer a:hover {
   }
 
   .album-container {
-    flex: 1 1 calc(40% - 20px);
+    flex-wrap: wrap;
+    padding: 20px 10px;
+    width: 100vw;
     box-sizing: border-box;
-    overflow: hidden;
+    justify-items: center;
+    gap: 10px;
   }
 
-  .album-card {
-    width: 45%;
+  .random-card {
+    flex: 1;
+    justify-items: center;
+    padding: 3rem;
+    width: 300px;
+  }
+
+  .album-card,
+  .random-card {
+    flex: 1 1 calc(50% - 20px);
+    min-width: 100px;
+    max-width: 300px;
+    margin-top: 0;
     padding: 2.2%;
+    transition: all 0.3s ease;
+  }
+
+  .album-card.full-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    padding: 2rem;
+
+    width: 90vw;
+    max-width: 90vw;
+    max-height: 90vh;
+    background-color: #1b2028;
+    border-radius: 16px;
+    border: 3px solid transparent;
+    background-clip: padding-box;
+    text-align: center;
+    color: #f1f3f3;
+    background-image: linear-gradient(135deg,
+        rgba(117, 46, 124, 0.35),
+        rgba(115, 74, 88, 0.1) 15%,
+        #1b2028 20%,
+        #1b2028 100%);
+  }
+
+
+  .album-card.full-screen .album-art img {
+    height: 100%;
+    object-fit: contain;
+
+  }
+
+  .album-card.full-screen p {
+    font-size: .9em;
+  }
+
+  .album-card.full-screen .more-info {
+    display: block;
+  }
+
+  .album-card.full-screen .close-btn {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: #f1f3f3;
+    font-size: 2rem;
+    cursor: pointer;
   }
 
   .album-art {
     width: 100%;
+    padding-top: 0;
   }
 
   .album-card h2 {
-    font-size: .75em;
-    margin: 10px 0px 0px 0px;
+    font-size: 1em;
+    /* margin: 10px 0px 0px 0px; */
   }
 
   .album-card p {
@@ -378,10 +472,10 @@ footer a:hover {
   .more-info {
     display: none;
   }
+}
 
-  @media (min-width: 900px) {
-    h1 {
-      font-size: 7vw;
-    }
+@media (min-width: 767px) {
+  h1 {
+    font-size: 7vw;
   }
 }
