--- a/style.css
+++ b/style.css
@@ -202,8 +202,11 @@ select:focus {
   border-radius: 4px;
 }
 
+/* Changes for Accessibility: 
+- Darker grey for contrast 
+*/ 
 .button:hover {
-  background-color: grey;
+  background-color: #4d4d4d;
 }
 
 .button.active {
